@@ -1,0 +1,3 @@
+{
+  "type": "createbigcannons:fuze_removal"
+}
