@@ -1,0 +1,3 @@
+{
+  "type": "createbigcannons:tracer_removal"
+}
