@@ -899,6 +899,7 @@ f3c9eea77286d0b77399eb90de870b5234006ea6 data/minecraft/recipes/cast_iron_block.
 88cf0974f601688d446c9b97747575826476650c data/minecraft/recipes/cast_iron_ingot_from_block.json
 60f156e979f0caa94dd9068e73589c891cefae16 data/minecraft/recipes/cast_iron_ingot_from_nuggets.json
 3bf900e50233fcd81fbb597b2b35bd65dad1b799 data/minecraft/recipes/cast_iron_nugget.json
+b62bf6e652d88e15a542ad7a5a4a3c78f099be59 data/minecraft/recipes/fuze_removal.json
 0cebaee2fcd00b0c95382c26b0f4aad1b69afd41 data/minecraft/recipes/munition_fuzing.json
 e5515448b13fad8c998b3defe184b2d6031594d1 data/minecraft/recipes/munition_fuzing_deployer.json
 72086fef01864c27b3cd2328dcdfe7750915cb3d data/minecraft/recipes/nethersteel_block.json
@@ -907,6 +908,7 @@ e5515448b13fad8c998b3defe184b2d6031594d1 data/minecraft/recipes/munition_fuzing_
 a144344619878237f41ee3b1f6827a9f81799291 data/minecraft/recipes/nethersteel_nugget.json
 e3d412883828f984ded0bb488a177dfd6d3dabed data/minecraft/recipes/tracer_application.json
 41dcf64e24262c2b8d8c4a47a8f35d69bf26bbb0 data/minecraft/recipes/tracer_application_deployer.json
+eacf7b2b5e54bd5740264fa3061859e7ed313a11 data/minecraft/recipes/tracer_removal.json
 05a581d816ec4a369b6ecc7120d48d8594dcfa28 data/minecraft/recipes/wrought_iron_drop_mortar_end_mirrored.json
 7fa5065e32210f792d1daad2d7268247904f6252 data/minecraft/tags/blocks/mineable/axe.json
 693c77552826b3268aae1ea17c84ca6b0b8a357c data/minecraft/tags/blocks/mineable/pickaxe.json
